--- a/js/pages/room/pop-btn.html
+++ b/js/pages/room/pop-btn.html
@@ -1,14 +1,14 @@
 <style type="text/css">
 	.popover-Button {
-		width: 40%;
+		width: 50%;
 		-webkit-touch-callout:none;
 	}
 </style>
-<div style="position: fixed;bottom: 20px;width: 100%;" class="mui-text-center" ms-controller="aInfoBtn">
-	<button class="popover-Button mui-btn mui-btn-outlined bs-text-white" onclick="$('.popover').addClass('popover-hide');popover_ishide = true;">
+<div style="position: fixed;bottom: 20px;width: 100%; display: flex; justify-content: space-between; padding: 0 25px;" class="mui-text-center" ms-controller="aInfoBtn">
+	<button class="popover-Button mui-btn mui-btn-outlined bs-text-small bs-text-white" style="border-radius: 0;" onclick="$('.popover').addClass('popover-hide');popover_ishide = true;">
 		取消
 	</button>&emsp;
-	<button class='popover-Button mui-btn mui-btn-outlined bs-text-gold' style="border-color: #baa071;" ms-click="select">
+	<button class='popover-Button mui-btn mui-btn-outlined bs-text-small bs-text-white' style="border-radius: 0; border-color: #baa071;" ms-click="select">
 		{{selectText}}
 	</button>
 </div>
