加盟商添加详情页面

--- a/js/pages/franchisee/index.html
+++ b/js/pages/franchisee/index.html
@@ -44,9 +44,11 @@
             </div>
             <!-- 提现 -->
             <div class="swiper-slide">
+                
                 <div class="bs-text-xxx-larger fr-head" style="margin-left: 45px;">
                     {{@balance}}
                     <span class="bs-text-large bs-text-white"><br>账户余额</span>
+                    <img src="img/icon/question.png" alt="" style="position: absolute;top: -7px;right: -33px;width: 18px;">
                 </div>
                 <div class="bs-text-larger fr-content">
                     <div ms-visible="!@isVerifyShow">
