--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -41,7 +41,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="text-info">
+                <div class="text-info bs-bg-white">
                     <p style="padding: 15px 10px;">{{introduction| truncate(200,'...')}}</p>
                     <ul>
                         <!-- <li>
