--- a/js/pages/franchisee/month.html
+++ b/js/pages/franchisee/month.html
@@ -1,5 +1,5 @@
 <header class="bs-bg-dark" ms-controller="header">
-    <div class="bs-text-normal bs-text-gray header-up">累计详情</div>
+    <div class="bs-text-normal bs-text-gray fr-padding-20">{{@date}}详情</div>
     <div class="header-middle">
         <div class="fr-padding-20">
             <span class="bs-text-x-larger bs-text-gold">{{@sale}}</span>
@@ -9,7 +9,7 @@
         <div class="fr-padding-20">
             <span class="bs-text-x-larger bs-text-gold">{{@income}}</span>
             <br>
-            <span class="bs-text-smaller bs-text-white">累计分佣</span>
+            <span class="bs-text-smaller bs-text-white">店主分佣</span>
         </div>
     </div>
     <div class="bs-text-normal bs-text-gray header-bottom">入住人次 {{@number}}</div>
@@ -19,15 +19,16 @@
         <div class="fr-flex bs-text-normal">
             <div style="padding: 15px 0 0 20px;">{{el.date}}</div>
             <div style="margin: 11px 20px 10px 0;">
-                <button type="button" style="border-radius: 0;border-color: #000;padding: 3px 9px;" ms-click="@goMonth">查看详情</button>
+                <button type="button" style="border-radius: 0;border-color: #000;padding: 3px 9px;" ms-click="@goToday">查看详情</button>
             </div>
         </div>
         <div class="fr-flex">
             <div class="bs-text-smaller bs-text-gray" style="    margin: 0 0 15px 20px;">
-                <span>销售总额</span>&nbsp;
-                <span class="bs-text-black">{{el.sale}}<br></span>
-                <span>店主分佣</span>&nbsp;
-                <span class="bs-text-black">{{el.income}}</span>
+                <span ms-for="cl in el.room">{{cl.type}} 入住{{cl.checkin}}人 <br></span>
+            </div>    
+            <div style="margin: 20px 20px 0 0;">
+                <span class="bs-text-smaller bs-text-gray">销售金额</span>&nbsp;
+                <span class="bs-text-large">{{el.sale}}</span>
             </div>
         </div>
     </div>
